# peoplenet-process-extractor

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: local.example.toml
docs/architecture/: corpus-lifecycle.md  index-lifecycle.md  pipeline-overview.md  reference-extraction-lifecycle.md  run-lifecycle.md
docs/decisions/: ADR-0001-scenario-contract.md  ADR-0002-run-manifest.md  ADR-0003-corpus-inventory.md  ADR-0004-structural-index.md  ADR-0005-reference-extraction.md  ADR-0006-manifest-single-source.md  ADR-0007-m4object-node-index-separate.md
docs/domain/: corpus-layout.md  ln4-call-resolution.md  peoplenet-structural-model.md
docs/increments/: INC-0001-scenario-contract-v1.md  INC-0002-run-manifest-v1.md  INC-0003-corpus-inventory-v1.md  INC-0004-structural-index-v1.md  INC-0005-reference-extraction-v1.md  INC-0006-m4object-resources-manifest-v1.md  INC-0007-m4object-node-index-v1.md
docs/schemas/: corpus-manifest-v1.md  m4object-node-index-v1.md  reference-extraction-v1.md  run-manifest-v1.md  scenario-v1.md  structural-index-v1.md
scripts/: check_local_environment.py
src/peoplenet_process_extractor/: __init__.py  cli.py
tests/: test_check_local_environment.py  test_package.py
tests/golden/: m4o-corpus-manifest-v1.json  m4object-node-index-v1.json  reference-extraction-v1.json  structural-index-v1.json
tests/test_corpus/: test_cli.py  test_comparison.py  test_git_info.py  test_inventory.py  test_json_manipulation.py  test_m4o.py  test_models_validation.py  test_path_parsing.py  test_serialization.py  test_service.py
(+121 files in other folders)
