[project]
name = "peoplenet-process-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andresjhl", email = "andresjhl@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
peoplenet-process-extractor = "peoplenet_process_extractor.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
